포트폴리오 작업
1. MyInfo 수정
- ui 수정 (left정렬) 및 소개글 수정

2. md파일 수정
- 일부 md파일 대표image 추가

--- a/src/markdownFiles/2017-10-01-plugin.md
+++ b/src/markdownFiles/2017-10-01-plugin.md
@@ -1,7 +1,7 @@
 ---
   {"title": "Eclipse Plugin"},
   {"layout": "post"},
-  {"imageLink": "https://user-images.githubusercontent.com/65170244/222341217-aa3deb78-0363-48d3-92d1-067b358de3e7.png"},
+  {"imageLink": "https://github.com/hwan2272/java_e_p/assets/65170244/c0583449-35bf-4d1a-a36f-2ad8da11ce5b"},
   {"tags": "PROJECT/현업"},
   {"period": "2017. 10 ~ 2017. 12"},
 ---
