포트폴리오 작업
1. 사이트 UI단 Prototype 마무리
- Projects md파일 내용 일괄 수정
- Stacks, Contact 간략 Layout 및 UI 적용
- css수정 - welcome section에 한정 100vh 적용

2. 앞으로의 개선사항
- navigation 버튼 동작 수정 - 클릭시 section으로 이동하되 animation처리
- 화면 하단 'TOP'가기 버튼 적용예정
- 일부 mui component 공통 css 부분 styled-component 처리 (가능할시)
- 반응형 점검

--- a/src/markdownFiles/2013-10-sism.md
+++ b/src/markdownFiles/2013-10-sism.md
@@ -16,9 +16,11 @@
 - 기술스택 : [G2R, KTDS] ASP.NET 및 관련 라이브러리, MSSQL
 - 기술스택 : [삼성증권, 씨스퀘어] Java Jsp, Spring및 관련 라이브러리, Oracle, Mysql
 
-#### 업무 내역
+#### 기간
 
-- 주니어 개발자
+- 2013. 10 ~ 2016. 12 (2년 이상. (중간에 프로젝트도 있고 해서 뺀 기간))
+
+#### 업무 내역
 
 #### 1 . G2R 그룹웨어 운영, 유지보수
 
