포트폴리오 작업
1. header / nav / footer 수정
- Header에 header 추가, navigation에 nav 추가, Footer에 footer 추가 (html 5 태그)
- 반응형 대응 : header 와 nav 내 grid 처리로 영역 조정

2. top 가기 버튼 추가
- scroll이 어느정도 내려왔을시 top 버튼 추가 (ToTopButton.tsx)
- scroll 관련 css 조정 (behavior smooth)

3. Project md파일 수정
- listing 중 'key' prop을 적용하기 위해 codeKey 항목 추가

--- a/src/markdownFiles/2013-01-esail.md
+++ b/src/markdownFiles/2013-01-esail.md
@@ -1,4 +1,5 @@
 ---
+  {"codeKey": "esail_201301"},
   {"title": "이새일시스템"},
   {"layout": "post"},
   {"imageLink": "https://user-images.githubusercontent.com/65170244/222340551-f1756965-7398-4092-a84a-c89c4a343da7.png"},
@@ -13,7 +14,7 @@
 
 #### 기간
 
-- 2013. 01 ~ 2013. 09 (9개월)
+- [2013. 01 ~ 2013. 09] (9개월)
 
 #### 업무 내역
 
