--- a/src/markdownFiles/2013-10-sism.md
+++ b/src/markdownFiles/2013-10-sism.md
@@ -1,4 +1,5 @@
 ---
+  {"codeKey": "sism_201310"},
   {"title": "SI/SM"},
   {"layout": "post"},
   {"imageLink": "https://user-images.githubusercontent.com/65170244/222340616-fae8665d-f989-46e1-9609-92bcb45394ba.png"},
@@ -18,7 +19,7 @@
 
 #### 기간
 
-- 2013. 10 ~ 2016. 12 (2년 이상. (중간에 프로젝트도 있고 해서 뺀 기간))
+- [2013. 10 ~ 2016. 12] (2년 이상. (중간에 프로젝트도 있고 해서 뺀 기간))
 
 #### 업무 내역
 
