--- a/src/markdownFiles/2017-01-adzip.md
+++ b/src/markdownFiles/2017-01-adzip.md
@@ -1,4 +1,5 @@
 ---
+  {"codeKey": "adzip_201701"},
   {"title": "광고플랫폼"},
   {"layout": "post"},
   {"imageLink": "https://user-images.githubusercontent.com/65170244/222340662-fedb0f05-92c0-47aa-a27e-54a7033fdad7.png"},
@@ -16,7 +17,7 @@
 
 #### 기간
 
-- 2017. 01 ~ 2019. 08 (2년 8개월)
+- [2017. 01 ~ 2019. 08] (2년 8개월)
 
 #### 업무 내역
 
