--- a/src/markdownFiles/2017-10-plugin.md
+++ b/src/markdownFiles/2017-10-plugin.md
@@ -1,4 +1,5 @@
 ---
+  {"codeKey": "plugin_201710"},
   {"title": "Eclipse Plugin"},
   {"layout": "post"},
   {"imageLink": "https://github.com/hwan2272/java_e_p/assets/65170244/c0583449-35bf-4d1a-a36f-2ad8da11ce5b"},
@@ -15,7 +16,7 @@
 
 #### 기간
 
-- 2017. 10 ~ 2017. 12 (3개월)
+- [2017. 10 ~ 2017. 12] (3개월)
 
 #### 업무 내역
 
