포트폴리오 작업
1. Project md파일 수정
- 프로젝트 성과나 설명을 숫자로 보여주기 위한 처리
- meta 정보 추가 (serviceToNumber, unit)

2. Projects 수정
- 프로젝트 카드 description ui 수정

--- a/src/markdownFiles/2013-01-esail.md
+++ b/src/markdownFiles/2013-01-esail.md
@@ -1,13 +1,18 @@
 ---
-  {"codeKey": "esail_201301"},
-  {"title": "이새일시스템"},
-  {"layout": "post"},
-  {"imageLink": "https://user-images.githubusercontent.com/65170244/222340551-f1756965-7398-4092-a84a-c89c4a343da7.png"},
-  {"tags": "PROJECT/현업"},
-  {"period": "2013. 01 ~ 2013. 09"},
+{"codeKey": "esail_201301"},
+{"title": "이새일시스템"},
+{"layout": "post"},
+{"imageLink": "https://user-images.githubusercontent.com/65170244/222340551-f1756965-7398-4092-a84a-c89c4a343da7.png"},
+{"tags": "PROJECT/현업"},
+{"period": "2013. 01 ~ 2013. 09"},
+{"description": "이새일시스템: 경력단절 여성들을 위한 새일센터 (새로일하기센터) 상담사 선생님들의 백오피스 시스템"},
+{"serviceToNumber": "60여곳"},
+{"unit": "당시기준 전국 새일센터"},
 ---
 
 ### 여성가족부 이새일시스템
+
+### 당시기준 (전국 새일센터 60여곳)
 
 - 경력단절 여성들을 위한 새일센터 (새로일하기센터) 상담사 선생님들의 백오피스 시스템
 - 기술스택 : Spring(eGovFramework)및 관련 라이브러리, Oracle
