--- a/src/markdownFiles/2017-01-adzip.md
+++ b/src/markdownFiles/2017-01-adzip.md
@@ -1,13 +1,18 @@
 ---
-  {"codeKey": "adzip_201701"},
-  {"title": "광고플랫폼"},
-  {"layout": "post"},
-  {"imageLink": "https://user-images.githubusercontent.com/65170244/222340662-fedb0f05-92c0-47aa-a27e-54a7033fdad7.png"},
-  {"tags": "PROJECT/현업"},
-  {"period": "2017. 01 ~ 2019. 08"},
+{"codeKey": "adzip_201701"},
+{"title": "광고플랫폼"},
+{"layout": "post"},
+{"imageLink": "https://user-images.githubusercontent.com/65170244/222340662-fedb0f05-92c0-47aa-a27e-54a7033fdad7.png"},
+{"tags": "PROJECT/현업"},
+{"period": "2017. 01 ~ 2019. 08"},
+{"description": "사내 광고플랫폼 AD.zip"},
+{"serviceToNumber": "60여건"},
+{"unit": "당시기준 Offerwall 일일 클릭/전환"},
 ---
 
 ### 사내 광고플랫폼 AD.zip
+
+### 당시기준 (Offerwall : 클릭/전환 하루 60여건)
 
 - 광고플랫폼(타사 플랫폼) 및 리워드몰(일종의 쇼핑몰) 개발, 운영
 - 1년후 자사 플랫폼화 (G.Posting, Offerwall, Admin) 내부 리뉴얼 개발, 유지보수
