--- a/src/markdownFiles/2017-10-plugin.md
+++ b/src/markdownFiles/2017-10-plugin.md
@@ -1,10 +1,13 @@
 ---
-  {"codeKey": "plugin_201710"},
-  {"title": "Eclipse Plugin"},
-  {"layout": "post"},
-  {"imageLink": "https://github.com/hwan2272/java_e_p/assets/65170244/c0583449-35bf-4d1a-a36f-2ad8da11ce5b"},
-  {"tags": "PROJECT/현업"},
-  {"period": "2017. 10 ~ 2017. 12"},
+{"codeKey": "plugin_201710"},
+{"title": "Eclipse Plugin"},
+{"layout": "post"},
+{"imageLink": "https://github.com/hwan2272/java_e_p/assets/65170244/c0583449-35bf-4d1a-a36f-2ad8da11ce5b"},
+{"tags": "PROJECT/현업"},
+{"period": "2017. 10 ~ 2017. 12"},
+{"description": "Eclipse 플러그인 : SFTP업로드"},
+{"serviceToNumber": "사내 시연완료"},
+{"unit": "당시기준"},
 ---
 
 ### Eclipse 플러그인 : SFTP업로드
