포트폴리오 작업
1. Project md파일 수정
- 일부 문구 볼드처리 추가, 링크들 수정
- 최종성과 추가

2. Project 수정
- ProjectContentsDialog 내부 링크 및 볼드처리에 대한 style처리 추가/수정
- 명도 검사 테스트

--- a/src/markdownFiles/2013-01-esail.md
+++ b/src/markdownFiles/2013-01-esail.md
@@ -4,22 +4,22 @@
 {"layout": "post"},
 {"imageLink": "https://user-images.githubusercontent.com/65170244/222340551-f1756965-7398-4092-a84a-c89c4a343da7.png"},
 {"tags": "PROJECT/현업"},
-{"period": "2013. 01 ~ 2013. 09"},
+{"period": "2013.01 ~ 2013.09"},
 {"description": "이새일시스템: 경력단절 여성들을 위한 새일센터 (새로일하기센터) 상담사 선생님들의 백오피스 시스템"},
-{"serviceToNumber": "60여곳"},
+{"serviceToNumber": "100여곳"},
 {"unit": "당시기준 전국 새일센터"},
 ---
 
 ### 여성가족부 이새일시스템
 
-### 당시기준 (전국 새일센터 60여곳)
+### 당시기준 (전국 새일센터 **100여곳**)
 
 - 경력단절 여성들을 위한 새일센터 (새로일하기센터) 상담사 선생님들의 백오피스 시스템
 - 기술스택 : Spring(eGovFramework)및 관련 라이브러리, Oracle
 
 #### 기간
 
-- [2013. 01 ~ 2013. 09] (9개월)
+- [2013.01 ~ 2013.09] (9개월)
 
 #### 업무 내역
 
@@ -29,10 +29,14 @@
 - 사이트 리뉴얼 참여 (홈페이지 퍼블리싱 화면단 적용)
 - 워크넷 연계 작업 참여 (백엔드 데이터 확인)
 
+#### 최종 성과
+
+- **당시기준 이새일 시스템의 홈페이지 리뉴얼 건 완료, 운영 지속**
+
 #### 잘한것
 
-- 고객 문의응대가 자주오는 달이 있었음. (많을시 하루에 100건) 업무 피로도가 꽤 쌓였지만 그럼에도 포기하지 않고 최대한 다 응대하는 인내심을 발휘함.
-- 홈페이지 사이트 리뉴얼 당시, 회사 내 디블리셔(디자인+퍼블리셔) 과장님과 협업하였음. 빠르게 잘 적용해줬다고 칭찬받음.
+- **인내심, 끈기** : 고객 문의응대가 자주오는 달이 있었음. (많을시 하루에 100건) 업무 피로도가 꽤 쌓였지만 그럼에도 포기하지 않고 최대한 다 응대하는 인내심을 발휘함.
+- **빠른 피드백** : 홈페이지 사이트 리뉴얼 당시, 회사 내 디블리셔(디자인+퍼블리셔) 과장님과 협업하였음. 빠르게 잘 적용해줬다고 칭찬받음.
 
 #### 배운것
 
