--- a/src/markdownFiles/2013-10-sism.md
+++ b/src/markdownFiles/2013-10-sism.md
@@ -4,7 +4,7 @@
 {"layout": "post"},
 {"imageLink": "https://user-images.githubusercontent.com/65170244/222340616-fae8665d-f989-46e1-9609-92bcb45394ba.png"},
 {"tags": "PROJECT/현업"},
-{"period": "2013. 10 ~ 2016. 12"},
+{"period": "2013.10 ~ 2016.12"},
 {"description": "각종 파견 SI / SM"},
 {"serviceToNumber": "300여명"},
 {"unit": "당시기준 G2R 그룹웨어 3사 사용자"},
@@ -12,7 +12,7 @@
 
 ### 각종 파견SI, SM : G2R, KTDS, 삼성증권, 씨스퀘어
 
-### 당시기준 (G2R 그룹웨어 : 3사 300여명 / KTDS 프로젝트 : 프리랜서 60여명)
+### 당시기준 (G2R 그룹웨어 3사 : **300여명** / KTDS 프로젝트 : 프리랜서 **60여명**)
 
 - 1 . G2R 그룹웨어 운영, 유지보수
 - 2 . KTDS New Neoss시스템 개발
@@ -24,7 +24,7 @@
 
 #### 기간
 
-- [2013. 10 ~ 2016. 12] (2년 이상. (중간에 프로젝트도 있고 해서 뺀 기간))
+- [2013.10 ~ 2016.12] (2년 이상. (중간에 프로젝트도 있고 해서 뺀 기간))
 
 #### 업무 내역
 
@@ -55,5 +55,12 @@
 - TAAP, CAAP 각 서비스 모니터링
 - TAAP, CAAP 결제시스템 도입으로, 카드 결제 프로세스 테스트, 확인
 - POS 개선 참여 (C#)
+
+#### 최종 성과
+
+- **1 . G2R 그룹웨어 운영, 유지보수 : 당시기준 Aladdin 그룹웨어 운영 지속**
+- **2 . KTDS New Neoss시스템 개발 : 당시기준 시스템 리뉴얼 개발 지속**
+- **3 . 삼성증권 ITAM 개발 : 당시기준 ITAM 서비스 오픈**
+- **4 . 씨스퀘어 TAAP, CAAP 개발 : 당시기준 TAAP, CAAP 오픈 및 운영 지속**
 
 ---
