--- a/src/markdownFiles/2017-10-plugin.md
+++ b/src/markdownFiles/2017-10-plugin.md
@@ -4,10 +4,10 @@
 {"layout": "post"},
 {"imageLink": "https://github.com/hwan2272/java_e_p/assets/65170244/c0583449-35bf-4d1a-a36f-2ad8da11ce5b"},
 {"tags": "PROJECT/현업"},
-{"period": "2017. 10 ~ 2017. 12"},
+{"period": "2017.10 ~ 2017.12"},
 {"description": "Eclipse 플러그인 : SFTP업로드"},
-{"serviceToNumber": "사내 시연완료"},
-{"unit": "당시기준"},
+{"serviceToNumber": ""},
+{"unit": ""},
 ---
 
 ### Eclipse 플러그인 : SFTP업로드
@@ -15,11 +15,11 @@
 - 이클립스 툴의 확장 플러그인 개발 : SFTP 업로드를 이클립스에서 가능하게 함
 - 기술스택 : Plugin개발용 Eclipse, Java
 - 사내 발표후 내부 이슈문제 등으로 홀딩. git저장
-- https://github.com/hwan2272/java_e_p.git
+- [GITHUB URL](https://github.com/hwan2272/java_e_p.git)
 
 #### 기간
 
-- [2017. 10 ~ 2017. 12] (3개월)
+- [2017.10 ~ 2017.12] (3개월)
 
 #### 업무 내역
 
@@ -30,10 +30,15 @@
 - 서버에 file 업로드 성공 확인 후 folder 업로드 구성
 - 사내 시연
 
+#### 최종 성과
+
+- **사내 시연 완료**
+
 #### 잘한것
 
-- 주 개발툴이었던 이클립스의 부가 기능(플러그인)을 직접 만들어봄
-- 알고리즘을 활용함. 서버에 folder 업로드를 구성하기 위해 재귀호출을 이용함 - (폴더 내부를 타고 들어가서 folder가 없고, file이 존재할때까지 재귀호출로 file을 찾음. file을 찾은후 그 위치에서부터 업로드 진행, 위로 타고 다시 올라감)
+- **주도 개발** : 사내 개발팀간 RND 제출의 결과물로, 개발은 혼자 진행함
+- **개발 구성 경험** : 주 개발툴이었던 이클립스의 부가 기능(플러그인)을 직접 만들어봄
+- **개발 구성 경험** : 알고리즘을 활용함. 서버에 folder 업로드를 구성하기 위해 재귀호출을 이용함 - (폴더 내부를 타고 들어가서 folder가 없고, file이 존재할때까지 재귀호출로 file을 찾음. file을 찾은후 그 위치에서부터 업로드 진행, 위로 타고 다시 올라감)
 
 #### 배운것
 
