--- a/src/markdownFiles/2017-01-adzip.md
+++ b/src/markdownFiles/2017-01-adzip.md
@@ -4,7 +4,7 @@
 {"layout": "post"},
 {"imageLink": "https://user-images.githubusercontent.com/65170244/222340662-fedb0f05-92c0-47aa-a27e-54a7033fdad7.png"},
 {"tags": "PROJECT/현업"},
-{"period": "2017. 01 ~ 2019. 08"},
+{"period": "2017.01 ~ 2019.08"},
 {"description": "사내 광고플랫폼 AD.zip"},
 {"serviceToNumber": "60여건"},
 {"unit": "당시기준 Offerwall 일일 클릭/전환"},
@@ -12,17 +12,17 @@
 
 ### 사내 광고플랫폼 AD.zip
 
-### 당시기준 (Offerwall : 클릭/전환 하루 60여건)
+### 당시기준 (Offerwall : 클릭/전환 하루 **60여건**)
 
 - 광고플랫폼(타사 플랫폼) 및 리워드몰(일종의 쇼핑몰) 개발, 운영
 - 1년후 자사 플랫폼화 (G.Posting, Offerwall, Admin) 내부 리뉴얼 개발, 유지보수
 - 기술스택 : Java Jsp, Spring, SpringBoot및 관련 라이브러리, Mysql
 - Admin개발시 bootstrap테마(concept-master) 일부 커스터마이징하여 적용
-- https://github.com/hwan2272/bootstrap_css_custom.git
+- [GITHUB URL](https://github.com/hwan2272/bootstrap_css_custom.git)
 
 #### 기간
 
-- [2017. 01 ~ 2019. 08] (2년 8개월)
+- [2017.01 ~ 2019.08] (2년 8개월)
 
 #### 업무 내역
 
@@ -40,12 +40,16 @@
 - Admin 구성시 Bootstrap 테마 (concept-master) 커스터마이징하여 사용
 - Hompage 구성 - SpringBoot Server, JSP
 
+#### 최종 성과
+
+- **당시기준 AD.zip 플랫폼의 구축 완료, Offerwall 서비스 지속 매출 발생**
+
 #### 잘한것
 
-- SpringBoot를 쉽게 터득함
-- 플랫폼화 구성을 만들어봄. 소스 패키지명에 pplatform (박정환 플랫폼) 으로 구성해봄 (RewardMall, G.Posting, Offerwall, Admin, Hompage 등)
-- 개발자 내에서는 광고 사업을 하기 싫어했지만, 담당자로서 포기하지 않고 할수 있는 일에만 집중하였고, 1년후 리뉴얼 하여 새롭게 오픈함으로서 결국에는 민앤지 서비스로서의 위치를 잡음 (현 홈페이지에서 서비스 목록에서 볼 수 있음 - 애드집)
-- Bootstrap 테마 중 하나인 concept-master를 활용하여 커스텀해서 나만의 스타일 테마를 만들어봄 (일명 lightblue 테마)
+- **빠른 파악, 습득** : SpringBoot를 쉽게 터득함
+- **개발 구성 경험** : 플랫폼화 구성을 만들어봄. 소스 패키지명에 pplatform (박정환 플랫폼) 으로 구성해봄 (RewardMall, G.Posting, Offerwall, Admin, Hompage 등)
+- **인내심, 끈기** : 개발자 내에서는 광고 사업을 하기 싫어했지만, 담당자로서 포기하지 않고 할수 있는 일에만 집중하였고, 1년후 리뉴얼 하여 새롭게 오픈함으로서 결국에는 민앤지 서비스로서의 위치를 잡음 (현 홈페이지에서 서비스 목록에서 볼 수 있음 - 애드집)
+- **라이브러리 커스텀 경험** : Bootstrap 테마 중 하나인 concept-master를 활용하여 커스텀해서 나만의 스타일 테마를 만들어봄 (일명 lightblue 테마)
 
 #### 배운것
 
