포트폴리오 작업
1. Projects 항목 수정
- ProjectCard단에서 내용 모두 보이도록 수정
- ProjectCard 클릭후 ProjectDialog 출현하도록 하였던 액션 삭제
- AlternateTimeline, ProjectContentsDialog 컴포넌트 삭제
- MD파일 수정 및 일부 MD파일 안나오도록 처리
- css 변경

2. 포트폴리오 테마 재수정
- 더욱 심플한 처리를 위해, FDA403, FFBE98 모두 제거
- black 너무 진한 글씨 조정 예정

--- a/src/markdownFiles/2013-01-esail.md
+++ b/src/markdownFiles/2013-01-esail.md
@@ -1,18 +1,16 @@
 ---
 {"codeKey": "esail_201301"},
-{"title": "이새일시스템"},
+{"title": "이새일시스템: 경력단절 여성들을 위한 새일센터 (새로일하기센터) 상담사 선생님들의 백오피스 시스템"},
 {"layout": "post"},
 {"imageLink": "https://user-images.githubusercontent.com/65170244/222340551-f1756965-7398-4092-a84a-c89c4a343da7.png"},
 {"tags": "PROJECT/현업"},
 {"period": "2013.01 ~ 2013.09"},
 {"description": "이새일시스템: 경력단절 여성들을 위한 새일센터 (새로일하기센터) 상담사 선생님들의 백오피스 시스템"},
-{"serviceToNumber": "100여곳"},
-{"unit": "당시기준 전국 새일센터"},
+# {"serviceToNumber": "100여곳"},
+# {"unit": "당시기준 전국 새일센터"},
 ---
 
-### 여성가족부 이새일시스템
-
-### 당시기준 (전국 새일센터 **100여곳**)
+### 설명
 
 - 경력단절 여성들을 위한 새일센터 (새로일하기센터) 상담사 선생님들의 백오피스 시스템
 - 기술스택 : Spring(eGovFramework)및 관련 라이브러리, Oracle
@@ -32,15 +30,5 @@
 #### 최종 성과
 
 - **당시기준 이새일 시스템의 홈페이지 리뉴얼 건 완료, 운영 지속**
-
-#### 잘한것
-
-- **인내심, 끈기** : 고객 문의응대가 자주오는 달이 있었음. (많을시 하루에 100건) 업무 피로도가 꽤 쌓였지만 그럼에도 포기하지 않고 최대한 다 응대하는 인내심을 발휘함.
-- **빠른 피드백** : 홈페이지 사이트 리뉴얼 당시, 회사 내 디블리셔(디자인+퍼블리셔) 과장님과 협업하였음. 빠르게 잘 적용해줬다고 칭찬받음.
-
-#### 배운것
-
-- 신입 개발자때라 쿼리 잔실수가 많아 혼났음. xml수정시 수정할 곳만 찾아 수정하고, 영향도를 체크하는 방향을 배움
-- 워크넷 연계 시 다수의 데이터가 하나 하나 돌면서 업데이트 되는 부분에서 일부는 업데이트 되고 일부는 업데이트가 되지 않는 상황이 있었음. 이를 거울삼아 업데이트가 하나라도 실패하면 기존의 데이터도 모두 rollback 되어야 하는 것이 정상임을 배움
 
 ---
