--- a/src/markdownFiles/2013-10-sism.md
+++ b/src/markdownFiles/2013-10-sism.md
@@ -1,18 +1,16 @@
 ---
 {"codeKey": "sism_201310"},
-{"title": "SI / SM"},
+{"title": "각종 파견 SI/SM : G2R/KTDS/삼성증권/씨스퀘어"},
 {"layout": "post"},
 {"imageLink": "https://user-images.githubusercontent.com/65170244/222340616-fae8665d-f989-46e1-9609-92bcb45394ba.png"},
 {"tags": "PROJECT/현업"},
 {"period": "2013.10 ~ 2016.12"},
 {"description": "각종 파견 SI / SM"},
-{"serviceToNumber": "300여명"},
-{"unit": "당시기준 G2R 그룹웨어 3사 사용자"},
+# {"serviceToNumber": "300여명"},
+# {"unit": "당시기준 G2R 그룹웨어 3사 사용자"},
 ---
 
-### 각종 파견SI, SM : G2R, KTDS, 삼성증권, 씨스퀘어
-
-### 당시기준 (G2R 그룹웨어 3사 : **300여명** / KTDS 프로젝트 : 프리랜서 **60여명**)
+### 설명
 
 - 1 . G2R 그룹웨어 운영, 유지보수
 - 2 . KTDS New Neoss시스템 개발
