--- a/src/markdownFiles/2017-01-adzip.md
+++ b/src/markdownFiles/2017-01-adzip.md
@@ -1,18 +1,16 @@
 ---
 {"codeKey": "adzip_201701"},
-{"title": "광고플랫폼"},
+{"title": "민앤지 광고플랫폼 AD.zip"},
 {"layout": "post"},
 {"imageLink": "https://user-images.githubusercontent.com/65170244/222340662-fedb0f05-92c0-47aa-a27e-54a7033fdad7.png"},
 {"tags": "PROJECT/현업"},
 {"period": "2017.01 ~ 2019.08"},
 {"description": "사내 광고플랫폼 AD.zip"},
-{"serviceToNumber": "60여건"},
-{"unit": "당시기준 Offerwall 일일 클릭/전환"},
+# {"serviceToNumber": "60여건"},
+# {"unit": "당시기준 Offerwall 일일 클릭/전환"},
 ---
 
-### 사내 광고플랫폼 AD.zip
-
-### 당시기준 (Offerwall : 클릭/전환 하루 **60여건**)
+### 설명
 
 - 광고플랫폼(타사 플랫폼) 및 리워드몰(일종의 쇼핑몰) 개발, 운영
 - 1년후 자사 플랫폼화 (G.Posting, Offerwall, Admin) 내부 리뉴얼 개발, 유지보수
@@ -43,18 +41,5 @@
 #### 최종 성과
 
 - **당시기준 AD.zip 플랫폼의 구축 완료, Offerwall 서비스 지속 매출 발생**
-
-#### 잘한것
-
-- **빠른 파악, 습득** : SpringBoot를 쉽게 터득함
-- **개발 구성 경험** : 플랫폼화 구성을 만들어봄. (RewardMall, G.Posting, Offerwall, Admin, Hompage 등)
-- **인내심, 끈기** : 개발자 내에서는 광고 사업을 하기 싫어했지만, 담당자로서 포기하지 않고 할수 있는 일에만 집중하였고, 1년후 리뉴얼 하여 새롭게 오픈함으로서 결국에는 민앤지 서비스로서의 위치를 잡음 (현 홈페이지에서 서비스 목록에서 볼 수 있음 - 애드집)
-- **라이브러리 커스텀 경험** : Bootstrap 테마 중 하나인 concept-master를 활용하여 커스텀해서 나만의 스타일 테마를 만들어봄 (일명 lightblue 테마)
-
-#### 배운것
-
-- 앱개발팀과 컨택하며 Native, Hybrid 개념 등을 익힘
-- 타 광고플랫폼사와 컨택하며 Chorme Network탭 디버깅이나 광고 용어등을 익힘 (CPA/노출/전환 등)
-- RewardMall 개발은 동년 6월에 마치고 QA까지 끝났으나 내부 정책이슈 등으로 오픈은 Delay됨. 서비스를 만들었다 해서 모두 오픈되는 것은 아님을 깨닫고, 마음 다스리는 법과 할수 있는 일에만 집중하는 것을 배움. - 1년후, 광고플랫폼을 오픈할수 있는 사이즈로 리뉴얼 해서 오픈 되었을때 만족감을 느낌
 
 ---
