--- a/src/markdownFiles/2017-10-plugin.md
+++ b/src/markdownFiles/2017-10-plugin.md
@@ -1,16 +1,16 @@
 ---
 {"codeKey": "plugin_201710"},
-{"title": "Eclipse Plugin"},
+{"title": "Eclipse 플러그인 : SFTP업로드"},
 {"layout": "post"},
 {"imageLink": "https://github.com/hwan2272/java_e_p/assets/65170244/c0583449-35bf-4d1a-a36f-2ad8da11ce5b"},
 {"tags": "PROJECT/현업"},
 {"period": "2017.10 ~ 2017.12"},
 {"description": "Eclipse 플러그인 : SFTP업로드"},
-{"serviceToNumber": ""},
-{"unit": ""},
+# {"serviceToNumber": ""},
+# {"unit": ""},
 ---
 
-### Eclipse 플러그인 : SFTP업로드
+### 설명
 
 - 이클립스 툴의 확장 플러그인 개발 : SFTP 업로드를 이클립스에서 가능하게 함
 - 기술스택 : Plugin개발용 Eclipse, Java
@@ -33,16 +33,5 @@
 #### 최종 성과
 
 - **사내 시연 완료**
-
-#### 잘한것
-
-- **주도 개발** : 사내 개발팀간 RND 제출의 결과물로, 개발은 혼자 진행함
-- **개발 구성 경험** : 주 개발툴이었던 이클립스의 부가 기능(플러그인)을 직접 만들어봄
-- **개발 구성 경험** : 알고리즘을 활용함. 서버에 folder 업로드를 구성하기 위해 재귀호출을 이용함 - (폴더 내부를 타고 들어가서 folder가 없고, file이 존재할때까지 재귀호출로 file을 찾음. file을 찾은후 그 위치에서부터 업로드 진행, 위로 타고 다시 올라감)
-
-#### 배운것
-
-- 파일 업로드는 비동기적으로 로그를 찍어야 할 것 같음을 배움 - 파일이 많을 시 이클립스 내에서는 아무 반응이 없다가 나중에 완료되고 로그가 뜨는 형식이었음
-- 사내 시연 후 반대 등이 심할수 있음을 깨달음 (ui에 정보를 입력하고 행동을 하는 것 자체가 시대를 역행하는 움직임으로 보여진다. - 휴먼 에러의 위험성)
 
 ---
